--- a/src/Components/Postjob.css
+++ b/src/Components/Postjob.css
@@ -1,15 +1,14 @@
-body {
-    margin: 0;
-    padding: 0;
-    background-image: url('../Assets/Job.jpg');
-    background-size: cover;
-    height: 100vh; 
-    display: flex;
-    margin-top: -170px;
-    justify-content: center;
-    align-items: center;
-  }
-  .input{
-    border-color: brown;
-  }
-  
+.background-container {
+  background-image: url('../Assets/Job.jpg');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  padding-top: 20px; /* Adjust as needed */
+}
+.input{
+  border-color: brown;
+}
