--- a/src/Components/Signup.css
+++ b/src/Components/Signup.css
@@ -1,3 +1,4 @@
+/* 
 body {
     margin: 0;
     padding: 0;
@@ -8,5 +9,4 @@ body {
     margin-top: -180px;
     justify-content: center;
     align-items: center;
-  }
-  
+  } */
