--- a/src/Components/backimg.css
+++ b/src/Components/backimg.css
@@ -1,4 +1,4 @@
-body, html {
+/* body, html {
     height: 100%;
   }
   .bg {
@@ -7,4 +7,4 @@ body, html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-  }
+  } */
