--- a/src/Components/home.css
+++ b/src/Components/home.css
@@ -1,17 +1,30 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap');
 
-body {
-    margin: 0;
-    padding: 0;
-    background-image: url("../Assets/Job.jpg");
-    background-size: cover;
-    height: 100vh; 
-    display: flex;
-    margin-top: -170px;
-    justify-content: center;
-    align-items: center;
-  }
+
+/* home.css */
+/* home.css */
+.background-container {
+  background-image: url('../Assets/Job.jpg');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  padding-top: 20px; /* Adjust as needed */
+}
+
+.typo {
+  margin-top: -420px; /* Adjust as needed */
+}
+
+.text-center {
+  text-align: center;
+}
+
+
   .typo{
     color: red;
     font-family: 'Bungee Spice', sans-serif;
